# alert-drive

./: .gitignore  Dockerfile  README.md  alert-drive.yml  paths.py  pyproject.toml  requirements.txt  test.py
app/: detect_and_draw.py  detect_wheel.ipynb  extract_roi_images.py  preprocess_data.ipynb  wheel_detection.py
app/notebooks/: detect_masks.ipynb  detect_sunglasses.ipynb  detect_wheel.ipynb  masks.yaml  sunglasses.yaml
app/scripts/: data_preprocessing.py  detect_and_draw.py  detect_occlusions.py  extract_roi_images.py  main.py  outbound_call.py  test.py  wheel_detection.py
images/10_files/: 10788-830a6bf2a91e516c.js  16854-6f6a71da334b6db0.js  187079645  21852-d4df5dadece59b20.js  22669-a870982341ef4bec.js  38110.f7362fb7114f1b73.js  5030-2055159ebfeb7f05.js  80939-a4bf35432ab28b0d.js  87943-88f5de8ddd04c6d4.js  98710-44ea26386627a187.js  LoggedOutConversionPanel.c49cacc8b3e3b8fc.js  SiteHeaderLinks.f0e02acd7252d20f.js  [title]-724ad253bc4a861b.js  _app-ec38a477e02df526.js  _buildManifest.js  common-9782b9d75ae847ab.js  constants-f51d6ec2439aa70e.js  core.js  destination  event  gtm.js  ig-membership  ig-membership.html  interest-group.html  js  js(1)  saved_resource(1).html  shutterstock.jsp  syncframe.html  topics-membership.html  view.jsp  webpack-584ca1d57912854d.js
