[tool.poetry]
name = "alert-drive"
version = "0.1.0"
description = ""
authors = ["mohith <mohithb987@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"
mediapipe = "^0.10.14"
pillow = "^10.4.0"
scikit-learn = "^1.5.1"
torch = "^2.4.0"
torchvision = "^0.19.0"
tqdm = "^4.66.5"
dlib = "^19.24.6"
scipy = "^1.14.0"
opencv-python = "^4.10.0.84"
ultralytics = "^8.2.78"
opencv-contrib-python = "^4.10.0.84"
opencv-contrib-python-headless = "^4.10.0.84"
twilio = "^9.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
